fix(gateway): address SonarCloud issues in miot-gateway module
- java:S6813 (MAJOR x7): replace @Inject field injection with constructor
  injection in ForkEngine, ForkFilterRegistry, ForkManagementResource,
  ForkMirrorResource — fields are now final where applicable
- java:S6204 (MAJOR x4): replace .collect(Collectors.toUnmodifiableList())
  and .collect(Collectors.toList()) with .toList() in ForkEngine and
  ForkManagementResource
- java:S1192 (CRITICAL x5): extract string literal constants —
  METRIC_FORK_REQUESTS, TAG_OUTCOME, TAG_TARGET in ForkEngine;
  FIELD_ERROR, FIELD_TOTAL in ForkManagementResource
- java:S112  (MAJOR x1): narrow throws Exception → throws IOException in
  extractJsonKey/extractKey in ForkEngine
- java:S2095 (BLOCKER x1): wrap Files.lines() in try-with-resources in
  ForkFilterRegistry.readFile()
- java:S1612 (MINOR x1): replace lambda with ConcurrentHashMap::newKeySet
  method reference in ForkFilterRegistry
- java:S1128 (MINOR x2): remove unused imports Collections (ForkFilterRegistry)
  and ForkTarget (ForkManagementResource)
- java:S1075 (MINOR x1): extract PATH_SEPARATOR constant in ForkMirrorResource
- java:S115  (CRITICAL x3): rename Outcome enum constants to UPPER_CASE
  (FORWARDED, DISCARDED, ERROR) in ForkResult

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>